# Eddie

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Commands.md  README.md
.ci/: Dockerfile  run.sh
BackupOldTest/: virt_server.cpp
LICENSES/: BSD-2-clause.txt
Model_DCOP/example/: UseCase1.yaml  UseCase1_new.yaml  UseCase2 _new.yaml  UseCase2.yaml  UseCase2_new.yaml  UseCase3 _new.yaml  UseCase3.yaml  UseCase3_new.yaml  UseCase4.yaml  UseCase4_new.yaml  UseCase5.yaml  UseCase5_new.yaml  solution1.txt  solution2.txt  solution3.txt  solution4.txt  solution5.txt
assets/json/config/: ActuatorWater1.json  ActuatorWater2.json  ActuatorWater3.json  AllarmNoisy1.json  AllarmNoisy2.json  AllarmNoisy3.json  AllarmSilent1.json  AllarmSilent2.json  AllarmSilent3.json  AudioSpeaker1.json  AudioSpeaker2.json  AudioSpeaker3.json  AudioSpeaker4.json  AudioSpeaker5.json  AudioSpeaker6.json  AudioSpeaker7.json  Bulb1.json  Bulb2.json  Bulb3.json  Bulb4.json  CalculatorCPU1.json  CalculatorCPU2.json  CalculatorCPU3.json  Camera1.json  Camera10.json  Camera11.json  Camera12.json  Camera13.json  Camera2.json  Camera3.json  Camera4.json  Camera5.json  Camera6.json  Camera7.json  Camera8.json  Camera9.json  Door1.json  Door2.json  Door3.json  Door4.json  (+55 more)
assets/json/ontology/: dictionary.json  eddie-r-blinking-lamp.json  eddie-r-temperature.json  eddie-r-temperature.json.license  eddie-r-virtual-alarm.json
common/: CMakeLists.txt
common/include/: EddieEndpoint.h  eddie.h
common/src/: LinkFormat.cpp
docs/: Doxyfile
linux/: CMakeLists.txt
linux/communication/: CMakeLists.txt
linux/communication/include/: CoapClient.h  CoapServer.h  MGM.h  ResourceDirectory.h  common.h
linux/communication/src/: CoapClient.cpp  CoapServer.cpp  EddieEndpoint.cpp  MGM.cpp  ResourceDirectory.cpp  common.cpp
linux/examples/: TestHardwareLed.cpp  app.cpp  appLed.cpp  eddie_endpoint.cpp  hw.cpp  resource_directory.cpp  virt_client.cpp  virt_client_1.cpp  virt_client_2.cpp  virt_client_3.cpp  virt_client_4.cpp  virt_client_5.cpp  virt_server.cpp  virt_server_1.cpp
linux/hardware/: CMakeLists.txt
linux/hardware/include/: EddieActuatorsWater.h  EddieAllarmNoisy.h  EddieAllarmSilent.h  EddieAudioSpeaker.h  EddieBlinkingLamp.h  EddieBulb.h  EddieCalculatorCPU.h  EddieCamera.h  EddieDataset.h  EddieDoor.h  EddieFacialRecognizer.h  EddieMattressCover.h  EddieMicrophone.h  EddieMonitorVideo.h  EddieSensorBracelet.h  EddieService.h  EddieTemperature.h  EddieTemperatureSensor.h  EddieTent.h  EddieVibrationAllarm.h  EddieVirtualAlarm.h  FakeResource.h  GPIOWriter.h  OneWireReader.h  hardware_utils.h
linux/hardware/src/: EddieActuatorsWater.cpp  EddieAllarmNoisy.cpp  EddieAllarmSilent.cpp  EddieAudioSpeaker.cpp  EddieBlinkingLamp.cpp  EddieBulb.cpp  EddieCalculatorCPU.cpp  EddieCamera.cpp  EddieDataset.cpp  EddieDoor.cpp  EddieFacialRecognizer.cpp  EddieMattressCover.cpp  EddieMicrophone.cpp  EddieMonitorVideo.cpp  EddieSensorBracelet.cpp  EddieService.cpp  EddieTemperature.cpp  EddieTemperatureSensor.cpp  EddieTent.cpp  EddieVibrationAllarm.cpp  EddieVirtualAlarm.cpp  FakeResource.cpp  GPIOWriter.cpp  OneWireReader.cpp  hardware_utils.cpp
linux/intelligence/: CMakeLists.txt
linux/intelligence/include/: DFS.h  engine.h
linux/intelligence/src/: DFS.cpp  engine.cpp
linux/tests/: CMakeLists.txt  communication_tests.cpp  virtualization_tests.cpp
linux/virtualization/: CMakeLists.txt
linux/virtualization/include/: VirtualizationReceiver.h  VirtualizationSender.h  common.h
linux/virtualization/src/: VirtualizationReceiver.cpp  VirtualizationSender.cpp
results_use_cases/: Use_case_1.txt  Use_case_2.txt  Use_case_3.txt  Use_case_4.txt  Use_case_5.txt
tests/: fixture-start.sh  fixture-stop.sh
